# TestDemoList

./: README.md
AptDemo/: build.gradle  settings.gradle
AptDemo/app/: build.gradle
AptDemo/app_1/: build.gradle
AptDemo/apt-processor/: build.gradle
AptDemo/apt-sdk/: build.gradle
AudioMergeDemo/: settings.gradle
AudioMergeDemo/app/: build.gradle
BluetoothDemo/: settings.gradle
BluetoothDemo/app/: build.gradle
BluetoothDemo/spplib/: build.gradle
BottomNavigationTestDemo/: settings.gradle
BottomNavigationTestDemo/app/: build.gradle
CBaseStudy/: settings.gradle
CBaseStudy/app/: build.gradle
CalendarSyn/: settings.gradle
CalendarSyn/app/: build.gradle  google-services.json
CalendarSyn/keystore/: sign.jks  sign.jks.old
DarkModeTest/: settings.gradle
DarkModeTest/app/: build.gradle
EffectTest/: settings.gradle
EffectTest/app/: build.gradle
FastClickAop/: build.gradle  settings.gradle
FastClickAop/api/: build.gradle
FastClickAop/app/: build.gradle
FragmentTest/app/: build.gradle
KoinDemo/: build.gradle
KoinDemo/app/: build.gradle
KontlinTest/: settings.gradle
KontlinTest/app/: build.gradle
LeecodeTest/: README.md  settings.gradle
LeecodeTest/app/: build.gradle
MvvmApply/: build.gradle  common.gradle  gradle.properties  settings.gradle
MvvmApply/app/: build.gradle
MyViewTest/: settings.gradle
MyfirstDemo/: gradle.properties  settings.gradle
OneDriveDemo/: settings.gradle
PluginDemo/: build.gradle  settings.gradle
SkinChange/: settings.gradle
StudyPhoneSound/: settings.gradle
StudyWork/: build.gradle  config.gradle  settings.gradle
UnitTest/: build.gradle
av/FFmpegTest/app/src/main/cpp/: CMakeLists.txt  native-lib.c
av/FFmpegTest/app/src/main/cpp/include/libavcodec/: mathops.h
av/FFmpegTest/app/src/main/cpp/include/libavutil/: timer.h
av/WebrtcVadDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
av/WebrtcVadDemo/app/src/main/cpp/vad_src/: webrtc_vad.c
(+814 files in other folders)
